updating to Java 11 and updating dependencies and security issues