@@ -14,6 +14,13 @@
   <packaging>jar</packaging>
   <name>rdap-conformance-validator</name>
 
+    <properties>
+        <!-- This allows tests to work under Java 21. Bytebuddy is a dependency
+             of mockito, and long story short... updates aren't yet available
+             for mockito to use the correct version of ByteBuddy yet.           -->
+        <argLine>-Dnet.bytebuddy.experimental=true</argLine>
+    </properties>
+
     <dependencies>
 
         <dependency>
@@ -69,6 +76,11 @@
         </dependency>
 
         <dependency>
+            <groupId>net.minidev</groupId>
+            <artifactId>json-smart</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>dnsjava</groupId>
             <artifactId>dnsjava</artifactId>
         </dependency>
@@ -118,8 +130,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <source>11</source>
-                    <target>11</target>
+                    <source>21</source>
+                    <target>21</target>
                     <compilerArgs>
                         <arg>-Aproject=${project.groupId}/${project.artifactId}</arg>
                     </compilerArgs>
